# fbthrift_example3

./: CMakeLists.txt  EchoHandler.cpp  EchoHandler.h  ExampleHandler.h  Makefile  client.cc  echo.cc  example.thrift  log.txt  main.cc  main.cc.origin  server.cc
gen-cpp2/: EchoService.cpp  EchoService.h  EchoService.tcc  EchoServiceAsyncClient.cpp  EchoServiceAsyncClient.h  EchoService_custom_protocol.h  EchoService_processmap_binary.cpp  ExampleService.cpp  ExampleService.h  ExampleService.tcc  ExampleServiceAsyncClient.cpp  ExampleServiceAsyncClient.h  example_types.cpp  example_types.h  example_types.tcc
